--- a/src/css/queries.css
+++ b/src/css/queries.css
@@ -15,6 +15,12 @@
     font-weight: 600;
   }
 
+  .flight-filter-box {
+    padding-top: 50px;
+    margin-bottom: 100px;
+    margin-left: 35%;
+  }
+
   .search-result-table {
     padding: 30px 5%;
     font-size: 80%;
@@ -40,6 +46,12 @@
   .hero-title {
     font-size: 300%;
     font-weight: 600;
+  }
+
+  .flight-filter-box {
+    padding-top: 50px;
+    margin-bottom: 100px;
+    margin-left: 35%;
   }
 
   .search-result-table {
@@ -69,9 +81,15 @@
     font-weight: 600;
   }
 
+  .flight-filter-box {
+    padding-top: 50px;
+    margin-bottom: 100px;
+    margin-left: 15%;
+  }
+
   .search-result-table {
-    padding: 30px 5%;
-    font-size: 80%;
+    padding: 30px 3%;
+    font-size: 60%;
   }
 
   .footer {
@@ -96,9 +114,15 @@
     font-weight: 600;
   }
 
+  .flight-filter-box {
+    padding-top: 50px;
+    margin-bottom: 100px;
+    margin-left: 10%;
+  }
+
   .search-result-table {
-    padding: 30px 5%;
-    font-size: 50%;
+    padding: 10px 1%;
+    font-size: 4px;
   }
 
   .footer {
